--- a/src/main/resources/assets/forgotten_city/lang/en_us.json
+++ b/src/main/resources/assets/forgotten_city/lang/en_us.json
@@ -1,4 +1,3 @@
 {
-  "block.forgotten_city.test_2": "Test 2",
-  "block.forgotten_city.test": "Test"
+  "item_group.forgotten_city.forgottnen_city": "Forgottnen City"
 }
