--- a/src/main/resources/assets/forgotten_city/lang/en_us.json
+++ b/src/main/resources/assets/forgotten_city/lang/en_us.json
@@ -1,3 +1,3 @@
 {
-  "item_group.forgotten_city.forgottnen_city": "Forgottnen City"
+  "item_group.forgotten_city.forgottnen_city": "Forgotten City"
 }
